[package]
name = "rl_gui"
version = "0.1.0"
authors = ["Tom Goring <mail@tomgoring.co.uk>"]
edition = "2018"

[dependencies]
image = "0.23"
winit = "0.22"
cgmath = "0.17"
wgpu = "0.6.2"  # { git = "https://github.com/gfx-rs/wgpu-rs.git" }
futures = "0.3"
log = "0.4"
simple_logger = "*"
bytemuck = "1.4.1"
raw-window-handle = "0.3.3"
env_logger = "0.7"
shaderc = "0.6"
wgpu_glyph = "0.10.0"
glyph_brush = "0.7.2"
glam = "0.12.0"
itertools = "0.10.0"
rl_macro = { path = "./rl-macro"}

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.1"
glob = "0.3"
